# Shax-Desktop-Client

./: .gitignore  CMakeLists.txt  README.md  build.sh  images.qrc  shax-desktop-client_so_SO.ts
src/: main.cpp
src/backend/: boardmanager.cpp  boardmanager.h  gamepiece.cpp  gamepiece.h  node.cpp  node.h
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui
